refactor: use workdir from Dockerfile for default CWD, with user home dir as fallback
Signed-off-by: MDzaja <mirkodzaja0@gmail.com>

--- a/apps/docs/src/content/docs/file-system-operations.mdx
+++ b/apps/docs/src/content/docs/file-system-operations.mdx
@@ -151,7 +151,7 @@ await sandbox.fs.uploadFiles(files)
 
 ### Downloading Files
 
-The following commands downloads the file `file1.txt` from the Sandbox user's root directory and prints out the content:
+The following commands downloads the file `file1.txt` from the Sandbox working directory and prints out the content:
 
 <Tabs>
 <TabItem label="Python" icon="seti:python">
