--- a/apps/docs/src/content/docs/python-sdk/sync/file-system.mdx
+++ b/apps/docs/src/content/docs/python-sdk/sync/file-system.mdx
@@ -17,8 +17,7 @@ be performed within a Daytona Sandbox.
 #### FileSystem.\_\_init\_\_
 
 ```python
-def __init__(sandbox_id: str, toolbox_api: ToolboxApi,
-             get_root_dir: Callable[[], str])
+def __init__(sandbox_id: str, toolbox_api: ToolboxApi)
 ```
 
 Initializes a new FileSystem instance.
@@ -27,7 +26,6 @@ Initializes a new FileSystem instance.
 
 - `sandbox_id` _str_ - The Sandbox ID.
 - `toolbox_api` _ToolboxApi_ - API client for Sandbox operations.
-- `get_root_dir` _Callable[[], str]_ - A function to get the default root directory of the Sandbox.
 
 #### FileSystem.create\_folder
 
@@ -42,7 +40,7 @@ permissions.
 **Arguments**:
 
 - `path` _str_ - Path where the folder should be created. Relative paths are resolved based
-  on the user's root directory.
+  on the sandbox workdir.
 - `mode` _str_ - Folder permissions in octal format (e.g., "755" for rwxr-xr-x).
   
 
@@ -67,7 +65,7 @@ Deletes a file from the Sandbox.
 
 **Arguments**:
 
-- `path` _str_ - Absolute path to the file to delete.
+- `path` _str_ - Path to the file to delete. Relative paths are resolved based on the sandbox workdir.
   
 
 **Example**:
@@ -90,8 +88,8 @@ It can only be used for smaller files.
 
 **Arguments**:
 
-- `remote_path` _str_ - Path to the file in the Sandbox. Relative paths are resolved based on the user's
-  root directory.
+- `remote_path` _str_ - Path to the file in the Sandbox. Relative paths are resolved based
+  on the sandbox workdir.
 - `timeout` _int_ - Timeout for the download operation in seconds. 0 means no timeout. Default is 30 minutes.
   
 
@@ -127,8 +125,8 @@ This method is useful when you want to download larger files that may not fit in
 
 **Arguments**:
 
-- `remote_path` _str_ - Path to the file in the Sandbox. Relative paths are resolved based on the user's
-  root directory.
+- `remote_path` _str_ - Path to the file in the Sandbox. Relative paths are resolved based
+  on the sandbox workdir.
 - `local_path` _str_ - Path to save the file locally.
 - `timeout` _int_ - Timeout for the download operation in seconds. 0 means no timeout. Default is 30 minutes.
   
@@ -155,8 +153,7 @@ the grep command.
 **Arguments**:
 
 - `path` _str_ - Path to the file or directory to search. If the path is a directory,
-  the search will be performed recursively. Relative paths are resolved based on the user's
-  root directory.
+  the search will be performed recursively. Relative paths are resolved based on the sandbox workdir.
 - `pattern` _str_ - Search pattern to match against file contents.
   
 
@@ -189,8 +186,7 @@ size, permissions, and timestamps.
 
 **Arguments**:
 
-- `path` _str_ - Path to the file or directory. Relative paths are resolved based on the user's
-  root directory.
+- `path` _str_ - Path to the file or directory. Relative paths are resolved based on the sandbox workdir.
   
 
 **Returns**:
@@ -232,8 +228,8 @@ Lists files and directories in a given path and returns their information, simil
 
 **Arguments**:
 
-- `path` _str_ - Path to the directory to list contents from. Relative paths are resolved based on the user's
-  root directory.
+- `path` _str_ - Path to the directory to list contents from. Relative paths are resolved
+  based on the sandbox workdir.
   
 
 **Returns**:
@@ -269,10 +265,9 @@ Moves or renames a file or directory. The parent directory of the destination mu
 
 **Arguments**:
 
-- `source` _str_ - Path to the source file or directory. Relative paths are resolved based on the user's
-  root directory.
-- `destination` _str_ - Path to the destination. Relative paths are resolved based on the user's
-  root directory.
+- `source` _str_ - Path to the source file or directory. Relative paths are resolved
+  based on the sandbox workdir.
+- `destination` _str_ - Path to the destination. Relative paths are resolved based on the sandbox workdir.
   
 
 **Example**:
@@ -310,8 +305,7 @@ Performs search and replace operations across multiple files.
 **Arguments**:
 
 - `files` _List[str]_ - List of file paths to perform replacements in. Relative paths are
-  resolved based on the user's
-  root directory.
+  resolved based on the sandbox workdir.
 - `pattern` _str_ - Pattern to search for.
 - `new_value` _str_ - Text to replace matches with.
   
@@ -355,8 +349,8 @@ specified pattern. The pattern can be a simple string or a glob pattern.
 
 **Arguments**:
 
-- `path` _str_ - Path to the root directory to start search from. Relative paths are resolved based on the user's
-  root directory.
+- `path` _str_ - Path to the root directory to start search from. Relative paths are resolved
+  based on the sandbox workdir.
 - `pattern` _str_ - Pattern to match against file names. Supports glob
   patterns (e.g., "*.py" for Python files).
   
@@ -395,8 +389,7 @@ to leave that attribute unchanged.
 
 **Arguments**:
 
-- `path` _str_ - Path to the file or directory. Relative paths are resolved based on the user's
-  root directory.
+- `path` _str_ - Path to the file or directory. Relative paths are resolved based on the sandbox workdir.
 - `mode` _Optional[str]_ - File mode/permissions in octal format
   (e.g., "644" for rw-r--r--).
 - `owner` _Optional[str]_ - User owner of the file.
@@ -434,8 +427,7 @@ small files that fit into memory.
 **Arguments**:
 
 - `file` _bytes_ - File contents as a bytes object.
-- `remote_path` _str_ - Path to the destination file. Relative paths are resolved based on the user's
-  root directory.
+- `remote_path` _str_ - Path to the destination file. Relative paths are resolved based on the sandbox workdir.
 - `timeout` _int_ - Timeout for the upload operation in seconds. 0 means no timeout. Default is 30 minutes.
   
 
@@ -476,7 +468,7 @@ not fit into memory.
 
 - `local_path` _str_ - Path to the local file to upload.
 - `remote_path` _str_ - Path to the destination file in the Sandbox. Relative paths are
-  resolved based on the user's root directory.
+  resolved based on the sandbox workdir.
 - `timeout` _int_ - Timeout for the upload operation in seconds. 0 means no timeout. Default is 30 minutes.
   
 
@@ -536,6 +528,6 @@ Represents a file to be uploaded to the Sandbox.
 
 - `source` _Union[bytes, str]_ - File contents as a bytes object or a local file path. If a bytes object is provided,
   make sure it fits into memory, otherwise use the local file path which content will be streamed to the Sandbox.
-- `destination` _str_ - Absolute destination path in the Sandbox. Relative paths are resolved based on the user's
-  root directory.
+- `destination` _str_ - Absolute destination path in the Sandbox. Relative paths are resolved based on
+  the sandbox workdir.
 
