--- a/apps/docs/src/content/docs/typescript-sdk/file-system.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/file-system.mdx
@@ -13,17 +13,13 @@ Provides file system operations within a Sandbox.
 #### new FileSystem()
 
 ```ts
-new FileSystem(
-   sandboxId: string, 
-   toolboxApi: ToolboxApi, 
-   getRootDir: () => Promise<string>): FileSystem
+new FileSystem(sandboxId: string, toolboxApi: ToolboxApi): FileSystem
 ```
 
 **Parameters**:
 
 - `sandboxId` _string_
 - `toolboxApi` _ToolboxApi_
-- `getRootDir` _\(\) =\> Promise\<string\>_
 
 
 **Returns**:
@@ -42,8 +38,7 @@ Create a new directory in the Sandbox with specified permissions.
 
 **Parameters**:
 
-- `path` _string_ - Path where the directory should be created. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Path where the directory should be created. Relative paths are resolved based on the sandbox workdir.
 - `mode` _string_ - Directory permissions in octal format (e.g. "755")
 
 
@@ -70,8 +65,7 @@ Deletes a file or directory from the Sandbox.
 
 **Parameters**:
 
-- `path` _string_ - Path to the file or directory to delete. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Path to the file or directory to delete. Relative paths are resolved based on the sandbox workdir.
 
 
 **Returns**:
@@ -100,8 +94,7 @@ for downloading large files.
 
 **Parameters**:
 
-- `remotePath` _string_ - Path to the file to download. Relative paths are resolved based on the user's
-    root directory.
+- `remotePath` _string_ - Path to the file to download. Relative paths are resolved based on the sandbox workdir.
 - `timeout?` _number_ - Timeout for the download operation in seconds. 0 means no timeout.
     Default is 30 minutes.
 
@@ -131,8 +124,7 @@ so it is recommended for downloading larger files.
 
 **Parameters**:
 
-- `remotePath` _string_ - Path to the file to download in the Sandbox. Relative paths are resolved based on the user's
-    root directory.
+- `remotePath` _string_ - Path to the file to download in the Sandbox. Relative paths are resolved based on the sandbox workdir.
 - `localPath` _string_ - Path to save the downloaded file.
 - `timeout?` _number_ - Timeout for the download operation in seconds. 0 means no timeout.
     Default is 30 minutes.
@@ -160,8 +152,7 @@ Searches for text patterns within files in the Sandbox.
 
 **Parameters**:
 
-- `path` _string_ - Directory to search in. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Directory to search in. Relative paths are resolved based on the sandbox workdir.
 - `pattern` _string_ - Search pattern
 
 
@@ -191,8 +182,7 @@ Retrieves detailed information about a file or directory.
 
 **Parameters**:
 
-- `path` _string_ - Path to the file or directory. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Path to the file or directory. Relative paths are resolved based on the sandbox workdir.
 
 
 **Returns**:
@@ -219,8 +209,7 @@ Lists contents of a directory in the Sandbox.
 
 **Parameters**:
 
-- `path` _string_ - Directory path to list. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Directory path to list. Relative paths are resolved based on the sandbox workdir.
 
 
 **Returns**:
@@ -249,10 +238,8 @@ Moves or renames a file or directory.
 
 **Parameters**:
 
-- `source` _string_ - Source path. Relative paths are resolved based on the user's
-    root directory.
-- `destination` _string_ - Destination path. Relative paths are resolved based on the user's
-    root directory.
+- `source` _string_ - Source path. Relative paths are resolved based on the sandbox workdir.
+- `destination` _string_ - Destination path. Relative paths are resolved based on the sandbox workdir.
 
 
 **Returns**:
@@ -281,7 +268,7 @@ Replaces text content in multiple files.
 
 **Parameters**:
 
-- `files` _string\[\]_ - Array of file paths to process. Relative paths are resolved based on the user's
+- `files` _string\[\]_ - Array of file paths to process. Relative paths are resolved based on the sandbox workdir.
 - `pattern` _string_ - Pattern to replace
 - `newValue` _string_ - Replacement text
 
@@ -313,7 +300,7 @@ Searches for files and directories by name pattern in the Sandbox.
 
 **Parameters**:
 
-- `path` _string_ - Directory to search in. Relative paths are resolved based on the user's
+- `path` _string_ - Directory to search in. Relative paths are resolved based on the sandbox workdir.
 - `pattern` _string_ - File name pattern (supports globs)
 
 
@@ -341,8 +328,7 @@ Sets permissions and ownership for a file or directory.
 
 **Parameters**:
 
-- `path` _string_ - Path to the file or directory. Relative paths are resolved based on the user's
-    root directory.
+- `path` _string_ - Path to the file or directory. Relative paths are resolved based on the sandbox workdir.
 - `permissions` _FilePermissionsParams_ - Permission settings
 
 
@@ -380,8 +366,7 @@ for uploading large files.
 **Parameters**:
 
 - `file` _Buffer_ - Buffer of the file to upload.
-- `remotePath` _string_ - Destination path in the Sandbox. Relative paths are resolved based on the user's
-    root directory.
+- `remotePath` _string_ - Destination path in the Sandbox. Relative paths are resolved based on the sandbox workdir.
 - `timeout?` _number_ - Timeout for the upload operation in seconds. 0 means no timeout.
     Default is 30 minutes.
 
@@ -411,8 +396,7 @@ so it is recommended for uploading larger files.
 **Parameters**:
 
 - `localPath` _string_ - Path to the local file to upload.
-- `remotePath` _string_ - Destination path in the Sandbox. Relative paths are resolved based on the user's
-    root directory.
+- `remotePath` _string_ - Destination path in the Sandbox. Relative paths are resolved based on the sandbox workdir.
 - `timeout?` _number_ - Timeout for the upload operation in seconds. 0 means no timeout.
     Default is 30 minutes.
 
@@ -502,7 +486,6 @@ Represents a file to be uploaded to the Sandbox.
 
 **Properties**:
 
-- `destination` _string_ - Absolute destination path in the Sandbox. Relative paths are resolved based on the user's
-    root directory.
+- `destination` _string_ - Absolute destination path in the Sandbox. Relative paths are resolved based on the sandbox workdir.
 - `source` _string \| Buffer\<ArrayBufferLike\>_ - File to upload. If a Buffer, it is interpreted as the file content which is loaded into memory.
     Make sure it fits into memory, otherwise use the local file path which content will be streamed to the Sandbox.
