--- a/apps/docs/src/content/docs/typescript-sdk/process.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/process.mdx
@@ -40,8 +40,7 @@ Handles process and code execution within a Sandbox.
 new Process(
    sandboxId: string, 
    codeToolbox: SandboxCodeToolbox, 
-   toolboxApi: ToolboxApi, 
-   getRootDir: () => Promise<string>): Process
+   toolboxApi: ToolboxApi): Process
 ```
 
 **Parameters**:
@@ -49,7 +48,6 @@ new Process(
 - `sandboxId` _string_
 - `codeToolbox` _SandboxCodeToolbox_
 - `toolboxApi` _ToolboxApi_
-- `getRootDir` _\(\) =\> Promise\<string\>_
 
 
 **Returns**:
@@ -211,8 +209,7 @@ Executes a shell command in the Sandbox.
 **Parameters**:
 
 - `command` _string_ - Shell command to execute
-- `cwd?` _string_ - Working directory for command execution. If not specified, uses the Sandbox root directory.
-    Default is the user's root directory.
+- `cwd?` _string_ - Working directory for command execution. If not specified, uses the sandbox workdir.
 - `env?` _Record\<string, string\>_ - Environment variables to set for the command
 - `timeout?` _number_ - Maximum time in seconds to wait for the command to complete. 0 means wait indefinitely.
 
