--- a/examples/jupyter/daytona.ipynb
+++ b/examples/jupyter/daytona.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "# List files in the sandbox\n",
-    "files = sandbox.fs.list_files(\"~\")\n",
+    "files = sandbox.fs.list_files(\".\")\n",
     "pp(files)\n",
     "\n",
     "# Create a new directory in the sandbox\n",
@@ -338,7 +338,7 @@
     "sandbox.fs.upload_file(file_content, file_path)\n",
     "\n",
     "# Search for the file we just added\n",
-    "matches = sandbox.fs.find_files(\"~\", \"World!\")\n",
+    "matches = sandbox.fs.find_files(\".\", \"World!\")\n",
     "pp(matches)\n",
     "\n",
     "# Replace the contents of the file\n",
@@ -360,7 +360,7 @@
     "sandbox.fs.move_files(file_path, new_file_path)\n",
     "\n",
     "# Find the file in the new location\n",
-    "search_results = sandbox.fs.search_files(\"~\", \"moved-data.txt\")\n",
+    "search_results = sandbox.fs.search_files(\".\", \"moved-data.txt\")\n",
     "pp(search_results)\n",
     "\n",
     "# Delete the file\n",
@@ -506,7 +506,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
