--- a/apps/docs/src/content/docs/typescript-sdk/sandbox.mdx
+++ b/apps/docs/src/content/docs/typescript-sdk/sandbox.mdx
@@ -335,6 +335,22 @@ console.log(`Sandbox user home: ${userHomeDir}`);
 
 ***
 
+#### ~~getUserRootDir()~~
+
+```ts
+getUserRootDir(): Promise<undefined | string>
+```
+
+**Returns**:
+
+- `Promise<undefined | string>`
+
+##### Deprecated
+
+Use `getUserHomeDir` instead. This method will be removed in a future version.
+
+***
+
 #### getWorkdir()
 
 ```ts
